--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cldcvr/flow-icon",
-  "version": "0.0.2",
-  "description": "This package contains free set icons to use with `@cldcvr/flow-core`",
+  "version": "0.0.1",
+  "description": "This package contains free set icons to use in `@cldcvr/flow-core`",
   "main": "./dist/types/index.js",
   "module": "./dist/types/index.js",
   "types": "./dist/types/index.d.ts",
@@ -24,5 +24,14 @@
     "lit-html": "^2.2.7",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:cldcvr/flow-icon.git"
+  },
+  "publishConfig": {
+    "access": "restricted",
+    "registry": "https://pkgs.dev.azure.com/cldcvrdevusa/_packaging/FlowLibraryFeed/npm/registry/",
+    "always-auth": true
   }
 }
