--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@cldcvr/flow-icon",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "This package contains free set icons to use in `@cldcvr/flow-core`",
-  "main": "./dist/types/index.js",
-  "module": "./dist/types/index.js",
+  "main": "dist/flow-icon.es.js",
+  "module": "dist/flow-icon.es.js",
   "types": "./dist/types/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": " tsc",
+    "build": "vite build --emptyOutDir && tsc -emitDeclarationOnly",
     "download-icons": "node ./figma/downloadIcons.js",
     "prepublishOnly": "yarn download-icons && yarn build"
   },
@@ -17,13 +17,18 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.27.2",
-    "fs": "^0.0.1-security"
+    "@cldcvr/flow-core": "^0.0.8"
   },
   "devDependencies": {
+    "axios": "^0.27.2",
+    "fs": "^0.0.1-security",
     "lit-html": "^2.2.7",
     "prettier": "^2.7.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vite": "^3.0.4"
+  },
+  "peerDependencies": {
+    "@cldcvr/flow-core": "*"
   },
   "repository": {
     "type": "git",
