--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cldcvr/flow-icon",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "This package contains free set icons to use in `@cldcvr/flow-core`",
   "main": "dist/flow-icon.es.js",
   "module": "dist/flow-icon.es.js",
@@ -17,7 +17,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@cldcvr/flow-core": "latest"
+    "@cldcvr/flow-core": "*"
   },
   "devDependencies": {
     "axios": "^0.27.2",
@@ -28,7 +28,7 @@
     "vite": "^3.0.4"
   },
   "peerDependencies": {
-    "@cldcvr/flow-core": "latest"
+    "@cldcvr/flow-core": "*"
   },
   "repository": {
     "type": "git",
