FLOW-400 publish and update package command updated

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,4 +17,4 @@ jobs:
           encodedString: ${{ secrets.NPMRC }}
       - uses: actions/setup-node@v2
       - run: yarn install
-      - run: yarn publish-packages
+      - run: yarn update-packages && yarn publish-packages
