--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "update-packages": "ts-node-esm package-builder/create-packages.ts && yarn",
-    "publish-packages": "npx lerna publish minor --no-private"
+    "publish-packages": "npx lerna publish patch --no-private --yes"
   },
   "keywords": [
     "icons"
