--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: fregante/setup-git-token@v1
         with:
+          name: vikas-cldcvr
+          email: vikas@cldcvr.com
           token: ${{ secrets.GITHUB_TOKEN }}
       # Setup original .npmrc file to download packages
       - uses: timheuer/base64-to-file@v1.1
