--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,5 +22,5 @@ jobs:
           GH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
         run: |
           git config user.name "${{ github.actor }}"
-          git config user.email "${{ github.actor}}@users.noreply.github.com"
+          git config user.email "vikas@cldcvr.com"
           yarn publish-packages
