--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,18 +10,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          token: ${{ secrets.PUBLISH_TOKEN }}
-      # Setup original .npmrc file to download packages
-      - uses: timheuer/base64-to-file@v1.1
-        with:
-          fileName: '.npmrc'
-          fileDir: .
-          encodedString: ${{ secrets.NPMRC }}
+          token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/setup-node@v2
       - run: yarn install
       - name: "Version and publish" # Interesting step
         env:
-          GH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "vikas@cldcvr.com"
