--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,7 @@
 name: Publish
 on: [workflow_dispatch]
 jobs:
-  # publishing azure artifacts
-  azure:
+  npm:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -10,12 +9,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PUBLISH_TOKEN }}
       - uses: actions/setup-node@v2
       - run: yarn install
       - name: "Version and publish" # Interesting step
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           git config user.name "${{ github.actor }}"
