--- a/packages/@cldcvr/flow-gcp-icon/package.json
+++ b/packages/@cldcvr/flow-gcp-icon/package.json
@@ -13,7 +13,7 @@
   "keywords": [
     "icons"
   ],
-  "author": "",
+  "author": "@cldcvr",
   "license": "MIT",
   "dependencies": {
     "@cldcvr/flow-core": "*"
@@ -31,11 +31,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:cldcvr/flow-icon.git"
+    "url": "git+ssh://github.com/cldcvr/flow-icon.git"
   },
   "publishConfig": {
-    "access": "restricted",
-    "registry": "https://pkgs.dev.azure.com/cldcvrdevusa/_packaging/FlowLibraryFeed/npm/registry/",
-    "always-auth": true
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   }
 }
