--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install Dependencies
         run: yarn
-      - name: "Update Packages" 
+      - name: "Update Packages"
         env:
           GH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -31,6 +31,40 @@ jobs:
           git add -A
           git commit -m "Icons updated by GithubActions"
       - name: Create Release Pull Request or Publish to npm
+        id: changesets
+        uses: changesets/action@v1
+        with:
+          publish: yarn release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  publish-gpr:
+    name: Publish on GitHub Packages
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js 16.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+
+      - name: Install Dependencies
+        run: yarn
+      - name: "Update Packages"
+        env:
+          GH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          CUSTOM_REGISTRY_URL: "https://npm.pkg.github.com/@cldcvr"
+        run: |
+          git config user.name "${{ github.actor }}"
+          git config user.email "vikas@cldcvr.com"
+          yarn update-packages
+          git add -A
+          git commit -m "Icons updated by GithubActions"
+      - name: Create Release Pull Request or Publish to Github Packages
         id: changesets
         uses: changesets/action@v1
         with:
