--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,10 +4,11 @@ on:
   push:
     branches:
       - main
+      - md/github-pkg-release-action
 
 jobs:
-  release:
-    name: Release
+  publish_to_npm:
+    name: Publishing to npm registry
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -39,8 +40,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-  publish-gpr:
-    name: Publish on GitHub Packages
+  publish_to_github:
+    name: Publishing to github registry
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -50,13 +51,16 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16.x
+          registry-url: 'https://npm.pkg.github.com'
+          always-auth: true
+          scope: '@cldcvr'
 
       - name: Install Dependencies
         run: yarn
       - name: "Update Packages"
         env:
           GH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CUSTOM_REGISTRY_URL: "https://npm.pkg.github.com/@cldcvr"
         run: |
           git config user.name "${{ github.actor }}"
@@ -64,11 +68,19 @@ jobs:
           yarn update-packages
           git add -A
           git commit -m "Icons updated by GithubActions"
+      - name: Creating .npmrc
+        run: |
+          cat << EOF > "$HOME/.npmrc"
+            //npm.pkg.github.com/:_authToken=$NPM_TOKEN
+          EOF
+        env:
+          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Create Release Pull Request or Publish to Github Packages
         id: changesets
         uses: changesets/action@v1
         with:
-          publish: yarn release
+          publish: yarn release --no-git-tag
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
