--- a/packages/@cldcvr/flow-aws-icon/package.json
+++ b/packages/@cldcvr/flow-aws-icon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cldcvr/flow-aws-icon",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.1",
   "description": "This package contains free set icons to use in `@cldcvr/flow-core`",
   "main": "dist/flow-icon.es.js",
   "module": "dist/flow-icon.es.js",
