--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,31 @@
 name: Release
 
-on:
-  push:
-    branches:
-      - main
+on:  
+  workflow_dispatch:
+    inputs:
+      icon_pack:
+        description: 'Choose Icon pack to update'
+        required: true
+        default: 'all'
+        type: choice
+        options:
+        - all
+        - \@cldcvr/flow-system-icon
+        - \@cldcvr/flow-product-icon
+        - \@cldcvr/flow-gcp-icon
+        - \@cldcvr/flow-aws-icon
+      update_type:
+        description: 'Type of update'
+        required: true
+        default: 'minor'
+        type: choice
+        options:
+        - minor
+        - patch
 
 jobs:
-  publish_to_npm:
-    name: Publishing to npm registry
+  update_icons:
+    name: Updating icons from figma
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -27,9 +45,25 @@ jobs:
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "vikas@cldcvr.com"
-          yarn update-packages
+          yarn update-packages --${{ inputs.icon_pack }} --${{ inputs.update_type }}
           git add -A
           git commit -m "Icons updated by GithubActions"
+
+  publish_to_npm:
+    needs: update_icons
+    name: Publishing to npm registry
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js 16.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+
+      - name: Install Dependencies
+        run: yarn
       - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
@@ -40,6 +74,7 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   publish_to_github:
+    needs: update_icons
     name: Publishing to github registry
     runs-on: ubuntu-latest
     steps:
@@ -56,17 +91,6 @@ jobs:
 
       - name: Install Dependencies
         run: yarn
-      - name: "Update Packages"
-        env:
-          GH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CUSTOM_REGISTRY_URL: "https://npm.pkg.github.com/@cldcvr"
-        run: |
-          git config user.name "${{ github.actor }}"
-          git config user.email "vikas@cldcvr.com"
-          yarn update-packages
-          git add -A
-          git commit -m "Icons updated by GithubActions"
       - name: Creating .npmrc
         run: |
           cat << EOF > "$HOME/.npmrc"
