--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fs": "^0.0.1-security",
     "lit-html": "^2.2.7",
     "prettier": "^2.7.1",
+    "semver": "^7.3.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
