--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "update-packages": "ts-node-esm package-builder/create-packages.ts && yarn",
     "build-packages": "yarn workspaces run build",
-    "release": "yarn build-packages && yarn changeset publish"
+    "release": "yarn build-packages && yarn changeset publish",
+    "version": "yarn changeset version"
   },
   "keywords": [
     "icons"
