--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,12 +24,14 @@ on:
         - patch
 
 jobs:
-  publish_to_npm:
+  update_icons:
     name: Publishing to npm registry
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.PUBLISH_TOKEN }}
 
       - name: Setup Node.js 16.x
         uses: actions/setup-node@v2
@@ -48,6 +50,23 @@ jobs:
           yarn update-packages --${{ inputs.icon_pack }} --${{ inputs.update_type }}
           git add -A
           git commit -m "Icons updated by GithubActions"
+          git push origin main
+
+  publish_to_npm:
+    needs: update_icons
+    name: Publishing to npm registry
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js 16.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+
+      - name: Install Dependencies
+        run: yarn
       - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
