--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ on:
 
 jobs:
   update_icons:
-    name: Publishing to npm registry
+    name: Updating icons
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
