--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,21 +1,14 @@
 {
-  "name": "@cldcvr/flow-icon",
+  "name": "icon-storybook",
   "version": "0.0.4",
   "description": "This package contains free set icons to use in `@cldcvr/flow-core`",
   "private": true,
-  "type": "module",
   "sideEffects": false,
-  "workspaces": [
-    "packages/@cldcvr/*",
-    "packages/storybook"
-  ],
   "scripts": {
-    "start": "yarn workspace icon-storybook start",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "update-packages": "ts-node-esm package-builder/create-packages.ts && yarn",
-    "build-packages": "yarn workspaces run build",
-    "release": "yarn build-packages && yarn changeset publish",
-    "version": "yarn update-packages && yarn changeset version"
+    "storybook": "start-storybook -p 6013",
+    "start": "yarn storybook",
+    "build-storybook": "build-storybook",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "icons"
@@ -36,6 +29,13 @@
     "semver": "^7.3.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
+    "@storybook/addon-actions": "^6.5.7",
+    "@storybook/addon-essentials": "^6.5.7",
+    "@storybook/addon-links": "^6.5.7",
+    "@storybook/addon-storysource": "^6.5.12",
+    "@storybook/builder-vite": "^0.1.36",
+    "@storybook/web-components": "^6.5.7",
+    "storybook-addon-themes": "^6.1.0",
     "rollup-plugin-postcss-lit": "^2.0.0",
     "rollup-plugin-scss": "3.0.0"
   },
