--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           token: ${{ secrets.PUBLISH_TOKEN }}
+          ref: main
 
       - name: Setup Node.js 16.x
         uses: actions/setup-node@v2
