--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,6 +60,8 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
+          token: ${{ secrets.PUBLISH_TOKEN }}
+          ref: main
 
       - name: Setup Node.js 16.x
         uses: actions/setup-node@v2
@@ -84,6 +86,8 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
+          token: ${{ secrets.PUBLISH_TOKEN }}
+          ref: main
 
       - name: Setup Node.js 16.x
         uses: actions/setup-node@v2
