--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,16 @@ on:
         options:
         - minor
         - patch
-
+defaults:
+  run:
+    shell: bash
+    working-directory: .
+env:
+  DISTRIBUTION_ID: E1JYXHU7GFQMKF
+  BUCKET_NAME: flow.cldcvr.com
+  AWS_REGION: us-east-1
+  ROLE_NAME: flow.cldcvr.com-role
+  ACCOUNT_ID: 679519065279
 jobs:
   update_icons:
     name: Updating icons
@@ -117,3 +126,38 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  deploy_to_storybook:
+    needs: update_icons
+    name: Deploying storybook
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.PUBLISH_TOKEN }}
+          ref: main
+
+      - name: Setup Node.js 16.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+
+       - name: Install Dependencies and Build
+         run:  export NODE_OPTIONS="--max_old_space_size=4096" && yarn && yarn build-storybook
+       - name: Configure AWS credentials from Test account
+         uses: aws-actions/configure-aws-credentials@v1
+         with:
+           role-to-assume: arn:aws:iam::${{env.ACCOUNT_ID}}:role/${{env.ROLE_NAME}}
+           aws-region: ${{env.AWS_REGION}}
+
+       - name: Check Access
+         run: |
+           aws sts get-caller-identity
+
+       - name: Copy files to the website with the AWS CLI
+         run: |
+           aws s3 sync packages/storybook/storybook-static/ s3://${{env.BUCKET_NAME}}/icons/
+
+       - name: Invalidate CloudFront
+         run: |
+           aws cloudfront create-invalidation --distribution-id ${{env.DISTRIBUTION_ID}} --paths "/*"
