--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -131,6 +131,9 @@ jobs:
     needs: update_icons
     name: Deploying storybook
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
@@ -144,7 +147,7 @@ jobs:
           node-version: 16.x
 
       - name: Install Dependencies and Build
-        run:  export NODE_OPTIONS="--max_old_space_size=4096" && yarn && yarn build-packages
+        run:  export NODE_OPTIONS="--max_old_space_size=4096" && yarn && yarn build-storybook
       - name: Configure AWS credentials from Test account
         uses: aws-actions/configure-aws-credentials@v1
         with:
