--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "storybook": "start-storybook -p 6013",
     "start": "yarn storybook",
-    "build": "build-storybook",
+    "build": "yarn build-storybook",
     "build-storybook": "build-storybook",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
