--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -146,8 +146,10 @@ jobs:
         with:
           node-version: 16.x
 
-      - name: Install Dependencies and Build
-        run:  export NODE_OPTIONS="--max_old_space_size=4096" && yarn && yarn run build-stories
+      - name: Install Dependencies
+        run:  export NODE_OPTIONS="--max_old_space_size=4096" && yarn
+      - name: Build storybook
+        run: yarn run build-stories
       - name: Configure AWS credentials from Test account
         uses: aws-actions/configure-aws-credentials@v1
         with:
