--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,10 @@ on:
         options:
         - minor
         - patch
+defaults:
+  run:
+    shell: bash
+    working-directory: .
 env:
   DISTRIBUTION_ID: E1JYXHU7GFQMKF
   BUCKET_NAME: flow.cldcvr.com
@@ -142,10 +146,8 @@ jobs:
         with:
           node-version: 16.x
 
-      - name: Install Dependencies
-        run:  export NODE_OPTIONS="--max_old_space_size=4096" && yarn
-      - name: Build storybook
-        run: cd ./packages/storybook && yarn && yarn build
+      - name: Install Dependencies and Build storybook
+        run:  yarn && yarn run build-stories
       - name: Configure AWS credentials from Test account
         uses: aws-actions/configure-aws-credentials@v1
         with:
