--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -144,7 +144,7 @@ jobs:
           node-version: 16.x
 
       - name: Install Dependencies and Build storybook
-        run:  yarn && yarn run build-stories
+        run:  export NODE_OPTIONS="--max_old_space_size=4096" && yarn && yarn run build-stories
       - name: Configure AWS credentials from Test account
         uses: aws-actions/configure-aws-credentials@v1
         with:
