--- a/packages/@cldcvr/flow-aws-icon/package.json
+++ b/packages/@cldcvr/flow-aws-icon/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@cldcvr/flow-aws-icon",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "This package contains free set icons to use in `@cldcvr/flow-core`",
   "main": "dist/flow-icon.es.js",
   "module": "dist/flow-icon.es.js",
   "types": "./dist/types/index.d.ts",
   "scripts": {
     "test": "echo 'Error: no test specified' && exit 1",
-    "build": "vite build --emptyOutDir && tsc",
+    "build": "vite build --emptyOutDir && tsc && vite build --emptyOutDir --config vite.umd.config.ts",
     "prepublishOnly": "yarn build"
   },
   "keywords": [
