--- a/packages/@ollion/flow-engineering-icon/package.json
+++ b/packages/@ollion/flow-engineering-icon/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ollion/flow-gcp-icon",
-  "version": "1.9.1",
+  "name": "@ollion/flow-engineering-icon",
+  "version": "0.0.1",
   "description": "This package contains free set icons to use in `@ollion/flow-core`",
   "main": "dist/flow-icon.es.js",
   "module": "dist/flow-icon.es.js",
